CI vm_replication test indempotence
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/vm_replication/tasks/main.yml
+++ b/tests/integration/targets/vm_replication/tasks/main.yml
@@ -56,7 +56,8 @@
       ansible.builtin.set_fact:
         remote_cluster_name: "{{ cluster_connection_info.record.0.uuid }}"  # TODO replace with remoteClusterInfo.clusterName
 
-    - name: Create replication
+    # -----------------------------------------------------------------------
+    - name: Create replication - 1st pass
       scale_computing.hypercore.vm_replication:
         vm_name: XLAB-vm_replication_CI_test
         remote_cluster: "{{ remote_cluster_name }}"
@@ -66,7 +67,7 @@
         that:
           - replication_created is succeeded
           - replication_created is changed
-  
+
     - name: Get replication info for VM
       scale_computing.hypercore.vm_replication_info:
         vm_name: XLAB-vm_replication_CI_test
@@ -80,7 +81,32 @@
           - replication_info.records[0].state == 'enabled'
           - replication_info.records[0].remote_cluster == "{{ remote_cluster_name }}"
 
-    - name: Disable replication
+    - name: Create replication - 2nd pass
+      scale_computing.hypercore.vm_replication:
+        vm_name: XLAB-vm_replication_CI_test
+        remote_cluster: "{{ remote_cluster_name }}"
+        state: enabled
+      register: replication_created
+    - ansible.builtin.assert:
+        that:
+          - replication_created is succeeded
+          - replication_created is not changed
+
+    - name: Get replication info for VM
+      scale_computing.hypercore.vm_replication_info:
+        vm_name: XLAB-vm_replication_CI_test
+      register: replication_info
+    - ansible.builtin.assert:
+        that:
+          - replication_info is succeeded
+          - replication_info is not changed
+          - replication_info.records | length == 1
+          - replication_info.records[0].vm_name == 'XLAB-vm_replication_CI_test'
+          - replication_info.records[0].state == 'enabled'
+          - replication_info.records[0].remote_cluster == "{{ remote_cluster_name }}"
+
+    # -----------------------------------------------------------------------
+    - name: Disable replication - 1st pass
       scale_computing.hypercore.vm_replication:
         vm_name: XLAB-vm_replication_CI_test
         state: disabled
@@ -102,8 +128,32 @@
           - replication_info.records[0].vm_name == 'XLAB-vm_replication_CI_test'
           - replication_info.records[0].state == 'disabled'
           - replication_info.records[0].remote_cluster == "{{ remote_cluster_name }}"
-  
-    - name: Reenable replication
+
+    - name: Disable replication - 2nd pass
+      scale_computing.hypercore.vm_replication:
+        vm_name: XLAB-vm_replication_CI_test
+        state: disabled
+      register: replication_disabled
+    - ansible.builtin.assert:
+        that:
+          - replication_disabled is succeeded
+          - replication_disabled is not changed
+
+    - name: Get replication info for VM
+      scale_computing.hypercore.vm_replication_info:
+        vm_name: XLAB-vm_replication_CI_test
+      register: replication_info
+    - ansible.builtin.assert:
+        that:
+          - replication_info is succeeded
+          - replication_info is not changed
+          - replication_info.records | length == 1
+          - replication_info.records[0].vm_name == 'XLAB-vm_replication_CI_test'
+          - replication_info.records[0].state == 'disabled'
+          - replication_info.records[0].remote_cluster == "{{ remote_cluster_name }}"
+
+    # -----------------------------------------------------------------------
+    - name: Reenable replication - 1st pass
       scale_computing.hypercore.vm_replication:
         vm_name: XLAB-vm_replication_CI_test
         state: reenabled
@@ -126,6 +176,30 @@
           - replication_info.records[0].state == 'enabled'
           - replication_info.records[0].remote_cluster == "{{ remote_cluster_name }}"
 
+    - name: Reenable replication - 2nd pass
+      scale_computing.hypercore.vm_replication:
+        vm_name: XLAB-vm_replication_CI_test
+        state: reenabled
+      register: replication_reenabled
+    - ansible.builtin.assert:
+        that:
+          - replication_reenabled is succeeded
+          - replication_reenabled is not changed
+
+    - name: Get replication info for VM
+      scale_computing.hypercore.vm_replication_info:
+        vm_name: XLAB-vm_replication_CI_test
+      register: replication_info
+    - ansible.builtin.assert:
+        that:
+          - replication_info is succeeded
+          - replication_info is not changed
+          - replication_info.records | length == 1
+          - replication_info.records[0].vm_name == 'XLAB-vm_replication_CI_test'
+          - replication_info.records[0].state == 'enabled'
+          - replication_info.records[0].remote_cluster == "{{ remote_cluster_name }}"
+
+    # -----------------------------------------------------------------------
     - name: Delete XLAB-vm_replication_CI_test
       scale_computing.hypercore.vm: *delete-XLAB-vm_replication_CI_test
       register: output
