BUG - how to set SC_HOST etc via environ
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/examples/iso_info.yml
+++ b/examples/iso_info.yml
@@ -1,5 +1,6 @@
 - name: Example iso_info module
   hosts: localhost
+  # connection: local  # partial solution to use SC_HOST from bash environ
   gather_facts: False
   environment:
     - SC_HOST: https://1.2.3.4
