--- a/sample_us8_example2_playbook.yml
+++ b/sample_us8_example2_playbook.yml
@@ -1,13 +1,13 @@
 - name: US-8. As a user I want to be able to import a new VM image from HTTPS and SMB so that I can clone it later
   hosts: localhost
   tasks:
-  - name: Export VM to SMB
-    scale_computing.hypercore.vm_export:
+  - name: Import VM from SMB
+    scale_computing.hypercore.vm_import:
       cluster_instance:
           host: 'https://10.5.11.30'
           username: 'admin'
           password: 'admin'
-      vm_name: XLAB-POST-TEST
+      vm_name: XLAB-POST-TEST-IMPORT
       smb:
         server: XLAB-demo-VM-smb-server
         path: /users/test
