--- a/sample_us8_example3_playbook.yml
+++ b/sample_us8_example3_playbook.yml
@@ -10,14 +10,17 @@
       vm_name: XLAB-POST-TEST-IMPORT
       smb:
         server: XLAB-demo-VM-smb-server
+        kk: "{{ var_name }}"
         path: /users/test
         username: example1
         password: badpass
       cloud_init:
-        user_data:
+        user_data2: lookup(file, filename)
+        user_data: |
+          #cloud-config
           autoinstall:
             - version: 1
-            - locale: en_US"
+            - locale: en_US
         meta_data:
           network:
             version: 2
