--- a/tests/integration/targets/vm_export/tasks/main.yml
+++ b/tests/integration/targets/vm_export/tasks/main.yml
@@ -64,7 +64,7 @@
       scale_computing.hypercore.vm_export:
         vm_name: XLAB-export-test-integration
         smb:
-          server: XLAB-demo-VM-smb-server
+          server: "10.5.11.179"
           path: /users/test
           username: example1
           password: badpass
@@ -72,7 +72,7 @@
     - ansible.builtin.assert:
         that:
           - output is changed
-          - output.msg == "Virtual machine - XLAB-export-test-integration - export complete to - XLAB-demo-VM-smb-server"
+          - output.msg == "Virtual machine - XLAB-export-test-integration - export complete to - 10.5.11.179"
 
     - name: Delete XLAB-export-test-integration
       scale_computing.hypercore.vm: *delete-XLAB-export-test-integration
