--- a/tests/integration/targets/vm_export/tasks/main.yml
+++ b/tests/integration/targets/vm_export/tasks/main.yml
@@ -68,6 +68,7 @@
           path: /users/test
           username: example1
           password: badpass
+          file_name: my_file.xml
       register: output
     - ansible.builtin.assert:
         that:
