--- a/sample_vm_export_playbook.yml
+++ b/sample_vm_export_playbook.yml
@@ -2,24 +2,18 @@
   hosts: localhost
   tasks:
   - name: import VM from URI
-    scale_computing.hypercore.vm_import:
+    scale_computing.hypercore.vm_export:
       cluster_instance:
         host: 'https://10.5.11.30'
         username: 'admin'
         password: 'admin'
-      vm_name: XLAB-POST-TEST-import
+      vm_name: XLAB-POST-TEST
       smb:
         server: "10.5.11.179"
         path: /users/export-test
         username: example1
         password: badpass
         file_name: my_file.xml
-      cloud_init:
-        user_data: |
-          valid:
-          - yaml: 1
-          - expression: 2
-        meta_data: "{{ lookup('file', 'cloud-init-user-data-example.yml') }}"
     register: testout
 
   - name: output the HTTP request results
