--- a/tests/integration/targets/api/tasks/main.yml
+++ b/tests/integration/targets/api/tasks/main.yml
@@ -5,5 +5,5 @@
     SC_PASSWORD: "{{ sc_password }}"
 
   block:
-#    - include_tasks: 01_main.yml
+    - include_tasks: 01_main.yml
     - include_tasks: 02_corner_cases.yml
